# cosucra

./: .gitignore  README.md  pyproject.toml
notebooks/: 1_data_exploration.ipynb  2_data_transformation.ipynb
src/cosucra/: __init__.py
src/cosucra/1_exploration/: exploration.py
src/cosucra/2_transformation/: transformation.py
