[project]
name = "cosucra"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "baudouin", email = "baudouin@dataroots.io" }
]
dependencies = [
    "pandas>=2.2.2",
    "pip>=24.2",
    "openpyxl>=3.1.5",
    "matplotlib>=3.9.2",
    "matplotlib-inline>=0.1.7",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "dataframe-image>=0.2.4",
    "pickle-mixin>=1.0.2",
    "scikit-learn>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cosucra"]
